--- a/OsGuriDaCatequese/style.css
+++ b/OsGuriDaCatequese/style.css
@@ -1,3 +1,8 @@
+*{
+    padding:0;
+    margin:0;
+}
+
 :root{
     --cor-principal:#ffffff;
     --cor-secundaria:#c0c0c0;
@@ -7,4 +12,14 @@
 
 body{
     background-color:var(--cor-de-fundo);
+    color: var(--cor-principal);
+}
+
+
+.container-bota{
+    background-color: var(--cor-do-botao);
+    border: radius 25px;
+    padding: 2em; 
+    color: var(--cor-principal);
+    display: block; 
 }
