--- a/OsGuriDaCatequese/style.css
+++ b/OsGuriDaCatequese/style.css
@@ -11,15 +11,22 @@
 }
 
 body{
-    background-color:var(--cor-de-fundo);
+    background-image: url(img/Background.png);
     color: var(--cor-principal);
 }
 
 
-.container-bota{
+.container-botao{
     background-color: var(--cor-do-botao);
     border: radius 25px;
     padding: 2em; 
     color: var(--cor-principal);
     display: block; 
+}
+.container{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    background background-repeat:no-repeat ;
+    background-size: contain;
 }
